# albums

./: README.md  pyproject.toml  requirements.txt  settings.py  setup.py  setup_credentials.py  spreadsheet.csv
csv_data/: all.csv
csv_data/reasons/: 1001_Albums_You_Must_Hear_Before_You_Die.csv  AMA_for_Country.csv  AMA_for_Pop_Rock.csv  AMA_for_Rap_HipHop.csv  AMA_for_Soul_R_B.csv  Brit_Award_for_British_Album_of_the_Year.csv  Brit_Award_for_International_Album_of_the_Year.csv  Fantano_Top_200_Albums_of_2010s.csv  Future_Funk_Essentials.csv  Grammy_for_Album_of_the_Year.csv  Grammy_for_Best_Alternative.csv  Grammy_for_Best_Bluegrass.csv  Grammy_for_Best_Contemporary_Blues.csv  Grammy_for_Best_Contemporary_Christian_Music.csv  Grammy_for_Best_Country.csv  Grammy_for_Best_Dance-Electronic.csv  Grammy_for_Best_Jazz_Instrumental.csv  Grammy_for_Best_Jazz_Vocal.csv  Grammy_for_Best_Large_Jazz_Ensemble.csv  Grammy_for_Best_Latin_Jazz.csv  Grammy_for_Best_Latin_Pop.csv  Grammy_for_Best_Latin_Rock_Urban_or_Alternative.csv  Grammy_for_Best_New_Age.csv  Grammy_for_Best_Pop_Vocal.csv  Grammy_for_Best_R_B.csv  Grammy_for_Best_Rap.csv  Grammy_for_Best_Reggae.csv  Grammy_for_Best_Rock.csv  Grammy_for_Best_Traditional_Blues.csv  Grammy_for_Best_Traditional_Pop_Vocal.csv  Grammy_for_Best_Tropical_Latin.csv  Grammy_for_Best_Urban_Contemporary.csv  Grammy_for_Best_World_Music.csv  Manual.csv  Mercury_Prize.csv  NME's_500_Greatest_Albums_of_All_Time.csv  Pitchfork_Album_of_the_Year.csv  Recommendation.csv  Relation.csv  Rolling_Stone's_500_Greatest_Albums_of_All_Time.csv  (+3 more)
nextalbums/: __init__.py  __main__.py  common.py  core_gsheets.py  discogs_cache.py  discogs_update.py  export.py  image_proxy.py  update_datafiles.py
